Main da migliorare

--- a/index.html
+++ b/index.html
@@ -10,29 +10,252 @@
 </head>
 <body>
     <header>
-            <button>
-                <i class="fa-solid fa-table-calls"></i>
-                Speaker View
-            </button>
-            <button>
-                <i class="fa-solid fa-maximize"></i>
-            </button>
-        </div>
+        <button>
+            <i class="fa-solid fa-table-cells"></i>
+            Speaker View
+        </button>
+        <button>
+            <i class="fa-solid fa-maximize"></i>
+        </button>
     </header>
     <main>
-            MAIN
-        </div>
+        <div class="cameras">
+            <div>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+            </div>
+            <div>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+            </div>
+            <div>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+            </div>
+            <div>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+            </div>
+            <div>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+            </div>
+            <div>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+            </div>
+            <div>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+            </div>
+            <div>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+                <img src="https:/picsum.photos/300/200">
+                <span>
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </span>
+            </div>
+        </div>    
     </main>
     <footer>
-            <div>
-                LEFT
-            </div>
-            <div>
-                CENTER
-            </div>
-            <div>
-                RIGHT
-            </div>
+        <div>
+            <button>
+                <i class="fa-solid fa-microphone fa-2x"></i>
+                <div>
+                    Mute
+                </div>
+            </button>
+            <button>
+                <i class="fa-solid fa-chevron-up fa-sm"></i>
+            </button>
+            <button>
+                <i class="fa-solid fa-microphone fa-2x"></i>
+                <div>
+                    Stop Video
+                </div>
+            </button>
+            <button>
+                <i class="fa-solid fa-chevron-up"></i>
+            </button>
+        </div>
+        <div>
+            <button>
+                <i class="fa-solid fa-microphone fa-2x"></i>
+                <div>
+                    Invite
+                </div>
+            </button>
+            <button>
+                <i class="fa-solid fa-microphone fa-2x"></i>
+                <div>
+                    Manage Partecipants
+                </div>
+            </button>
+            <button>
+                <i class="fa-solid fa-chart-simple fa-2x"></i>
+                <div>
+                    Polling
+                </div>
+            </button>
+            <button>
+                <i  id="share-icon" class="fa-solid fa-share-from-square fa-2x"></i>
+                <div>
+                    Share Screen
+                </div>
+            </button>
+            <button>
+                <i class="fa-solid fa-chevron-up"></i>
+            </button>
+            <button>
+                <i class="fa-solid fa-comments fa-2x"></i>
+                <div>
+                    Chat
+                </div>
+            </button>
+            <button>
+                <i class="fa-solid fa-record-vinyl fa-2x"></i>
+                <div>
+                    Record
+                </div>
+            </button>
+            <button>
+                <i class="fa-solid fa-microsoft fa-2x"></i>
+                <div>
+                    Breakout Rooms
+                </div>
+            </button>
+            <button>
+                <i class="fa-solid fa-ellipsis fa-2x"></i>
+                <div>
+                    More
+                </div>
+            </button>
+        </div>
+        <div>
+            <button id="end-meeting-button">
+                End Meeting
+            </button>
         </div>
     </footer>
 
