--- a/index.html
+++ b/index.html
@@ -67,110 +67,164 @@
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
                 </span>
+            </div>
+            <div>
                 <img src="https:/picsum.photos/300/200">
                 <span>
                     <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
