--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <i class="fa-solid fa-chevron-up fa-sm"></i>
             </button>
             <button>
-                <i class="fa-solid fa-microphone fa-2x"></i>
+                <i class="fa-solid fa-video fa-2x"></i>
                 <div>
                     Stop Video
                 </div>
@@ -255,13 +255,13 @@
         </div>
         <div>
             <button>
-                <i class="fa-solid fa-microphone fa-2x"></i>
+                <i class="fa-solid fa-user-plus fa-2x"></i>
                 <div>
                     Invite
                 </div>
             </button>
             <button>
-                <i class="fa-solid fa-microphone fa-2x"></i>
+                <i class="fa-solid fa-user-group fa-2x"></i>
                 <div>
                     Manage Partecipants
                 </div>
@@ -294,7 +294,7 @@
                 </div>
             </button>
             <button>
-                <i class="fa-solid fa-microsoft fa-2x"></i>
+                <i class="fa-solid fa-windows fa-2x"></i>
                 <div>
                     Breakout Rooms
                 </div>
