--- a/index.html
+++ b/index.html
@@ -236,18 +236,14 @@
         <div>
             <button>
                 <i class="fa-solid fa-microphone fa-2x"></i>
-                <div>
-                    Mute
-                </div>
+                <div>Mute</div>
             </button>
             <button>
                 <i class="fa-solid fa-chevron-up fa-sm"></i>
             </button>
             <button>
                 <i class="fa-solid fa-video fa-2x"></i>
-                <div>
-                    Stop Video
-                </div>
+                <div>Stop Video</div>
             </button>
             <button>
                 <i class="fa-solid fa-chevron-up"></i>
@@ -256,54 +252,38 @@
         <div>
             <button>
                 <i class="fa-solid fa-user-plus fa-2x"></i>
-                <div>
-                    Invite
-                </div>
+                <div>Invite</div>
             </button>
             <button>
                 <i class="fa-solid fa-user-group fa-2x"></i>
-                <div>
-                    Manage Partecipants
-                </div>
+                <div>Manage Partecipants</div>
             </button>
             <button>
                 <i class="fa-solid fa-chart-simple fa-2x"></i>
-                <div>
-                    Polling
-                </div>
+                <div>Polling</div>
             </button>
             <button>
                 <i  id="share-icon" class="fa-solid fa-share-from-square fa-2x"></i>
-                <div>
-                    Share Screen
-                </div>
+                <div>Share Screen</div>
             </button>
             <button>
                 <i class="fa-solid fa-chevron-up"></i>
             </button>
             <button>
                 <i class="fa-solid fa-comments fa-2x"></i>
-                <div>
-                    Chat
-                </div>
+                <div>Chat</div>
             </button>
             <button>
                 <i class="fa-solid fa-record-vinyl fa-2x"></i>
-                <div>
-                    Record
-                </div>
+                <div>Record</div>
             </button>
             <button>
                 <i class="fa-solid fa-windows fa-2x"></i>
-                <div>
-                    Breakout Rooms
-                </div>
+                <div>Breakout Rooms</div>
             </button>
             <button>
                 <i class="fa-solid fa-ellipsis fa-2x"></i>
-                <div>
-                    More
-                </div>
+                <div>More</div>
             </button>
         </div>
         <div>
